Link Controller returns user access level

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ application//public/hot
 application//public/storage
 application//storage/*.key
 application//vendor
+application/vendor
 application/.env
 application/.env.backup
 application/.env.production
