[FIX] Add KeepAlive to fix errors with API Gateway

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -16,6 +16,10 @@ ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
 RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
 
+RUN echo "KeepAlive on" >> /etc/apache2/httpd.conf
+RUN echo "MaxKeepAliveRequests 1000" >> /etc/apache2/httpd.conf
+RUN echo "KeepAliveTimeout 600" >> /etc/apache2/httpd.conf
+
 # Copy the application code
 COPY . /var/www/html
 
@@ -33,6 +37,3 @@ RUN composer install
 
 # Set permissions
 RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
-
-RUN php artisan jwt:secret
-RUN php artisan key:generate
