--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
      - "80:80"
      - "443:443"
     environment:
-      DB_HOST: mysql
+      APP_ENV: production
   mysql:
     image: mysql:8.3.0
     environment:
