--- a/.tf.example
+++ b/.tf.example
@@ -22,6 +22,7 @@ resource "hcloud_server" "backend1" {
   location    = "nbg1"
 
   user_data = <<EOF
+  #cloud-config
   #!/bin/bash
   # Add Docker's official GPG key:
     sudo apt-get update
