--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
      - "443:443"
     environment:
       APP_ENV: production
+    depends_on:
+      mysql :
+        condition: service_healthy
   mysql:
     image: mysql:8.3.0
     restart: unless-stopped
