--- a/.tf.example
+++ b/.tf.example
@@ -17,41 +17,51 @@ provider "hcloud" {
 
 resource "hcloud_server" "backend1" {
   name        = "backend1"
-  server_type = "cex11"
+  server_type = "cx11"
   image       = "ubuntu-22.04"
   location    = "nbg1"
 
   user_data = <<EOF
   #cloud-config
-  #!/bin/bash
-  # Add Docker's official GPG key:
-    sudo apt-get update
-    sudo apt-get install ca-certificates curl
-    sudo install -m 0755 -d /etc/apt/keyrings
-    sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-    sudo chmod a+r /etc/apt/keyrings/docker.asc
+  write_files:
+    - path: /run/scripts/initialize.sh
+      content: |
+        #!/bin/bash
 
-  # Add the docker repository to Apt sources:
-    echo \
-    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-    $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
-    sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-    sudo apt-get update
+        # Add Docker's official GPG key:
+          sudo apt-get update
+          sudo apt-get install ca-certificates curl
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
 
-  # Install docker 
-    yes | sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+        # Add the docker repository to Apt sources:
+          echo \
+          "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+          $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+          sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
 
-  # Get backend repository
+        # Install docker 
+          yes | sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
-    git clone https://github.com/techbabette/libraryBackend.git
-    cd libraryBackend
+        # Get backend repository
 
-  # Get application production environment data
+          git clone https://github.com/techbabette/libraryBackend.git
+          cd libraryBackend
 
-    curl <production_env_source> > application/.env.production
+        # Get application production environment data
 
-  # Run backend
+          curl <production_env_source> > application/.env.production
 
-    sudo docker compose up -d
+        # Run backend
+
+          sudo docker compose up -d
+
+          echo 'Script executed successfully!' >> /run/testing.txt      
+      permissions: '0755'
+
+  runcmd:
+  - [ sh, "/run/scripts/initialize.sh" ]
   EOF
 }
