--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,6 @@
 # This workflow deploys changes made to this branch to the production server
 
-name: Node.js CI
+name: Deploy changes
 
 on:
   push:
@@ -16,6 +16,7 @@ jobs:
       run: |
           mkdir -p ~/.ssh/
           echo "${SSH_KEY}" > ~/.ssh/library
+          ls ~/.ssh
           chmod 600 ~/.ssh/library
         
     - name: Fetch changes on host and rebuild
