--- a/playbooks/templates/nodeexporter.service
+++ b/playbooks/templates/nodeexporter.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Runs the prometheus node exporter
+Wants=network-online.target
+After=network-online.target
 
 [Service]
 Type=simple
